sort.baseball.NaiveBaseball.scala.error
Erreur de compilation :
NaiveBaseball:10: error: illegal start of simple expression
      if(getCouleurJoueur(trouB,0)==(getCouleurJoueur(trouB,1)))[posi=0]
                                                                ^