sort.baseball.NaiveBaseball.scala.code
override def run() {
	val NbB=getNombreBases()
  do{
    var trouB=(getTrouBase()+1)%NbB
    var dMax=0
    var posi=getTrouPosition()
      for (position<-0 to 1){
        var d=(getCouleurJoueur(trouB,position)-trouB+4)%4
        if(d>dMax){posi=position}
      if(getCouleurJoueur(trouB,0)==(getCouleurJoueur(trouB,1)))[posi=0]
      
    }
    deplace(trouB,posi)
  }while(!estTrie())
}